# ndi-python

./: .clang-format  .gitignore  API_DOCUMENTATION.md  API_DOCUMENTATION_CN.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_CN.md  pyproject.toml  setup.py
.github/workflows/: build.yml  release.yml
NDIlib/: __init__.py
cmake/Modules/: FindNDI.cmake
example/: find.py  recv.py  recv_audio_16bpp.py  recv_audio_sd.py  recv_av.py  recv_cv.py  recv_framesync.py  recv_framesync_resend.py  recv_multi.py  requirements.txt  routing.py  send_audio.py  send_audio_16bpp.py  send_capabilities.py  send_capture.py  send_png.py  send_video.py  send_video_advanced.py
src/: PyAudioFrame.cpp  PyAudioFrame.hpp  PyMetadataFrame.cpp  PyMetadataFrame.hpp  PySendCreate.cpp  PySendCreate.hpp  PySource.cpp  PySource.hpp  PyVideoFrame.cpp  PyVideoFrame.hpp  main.cpp
